# supercollider-automation

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  regenerate
.github/workflows/: pluginbuild.yml
cmake_modules/: SuperColliderCompilerConfig.cmake  SuperColliderServerPlugin.cmake
core/: CMakeLists.txt  automation_core.cpp  automation_core.hpp  test.cpp
plugins/Automation/: Automation.cpp  Automation.hpp  Automation.sc  Automation.schelp
